# PerchEngine-Cpp

./: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Engine.cpp  Engine.h  Log.cpp  Log.h  Main.cpp  Perch-Engine-Cpp.sln  Perch-Engine-Cpp.vcxproj  Perch-Engine-Cpp.vcxproj.filters  PerchEngine-Cpp.sln  PerchEngine.vcxproj  PerchEngine.vcxproj.filters  README.md  SDL-Engine-Cpp.sln  SDL-Engine-Cpp.vcxproj  SDL-Engine-Cpp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cpp.hint
.github/workflow/: github-action-test.yml  release.yml
.github/workflows/: release.yml
PerchEngine-Cpp/: PerchEngine-Cpp.vcxproj  PerchEngine-Cpp.vcxproj.filters
PerchEngine-Cpp/src/: Engine.cpp  Engine.h
Tests/: Tests.vcxproj  Tests.vcxproj.filters  test.cpp
Tests/Structs/: Rect2_tests.cpp  Vector2_tests.cpp  Vector2i_tests.cpp
docs/: Branch.md  Overview.md  README.md
src/: Branch.cpp  Branch.h  Engine.cpp  Engine.h  Input.cpp  Input.h  Log.cpp  Log.h  Main.cpp  Random.cpp  Script.cpp  Script.h
src/Branch/: Audio.cpp  Branch.cpp  Branch.h  Script.cpp  Script.h
src/EngineComponents/: Input.cpp  Input.h  Random.h  Resource.cpp  Resource.h
src/Other/: Script.cpp  Script.h
src/Renderer/: Renderer.h  SDLRenderer.cpp  SDLRenderer.h
src/Resources/: Resource.cpp  Resource.h  Texture.cpp  Texture.h
src/Squawk/: Log.cpp  Log.h
src/Structs/: Color.cpp  Color.h  Font.cpp  Font.h  Rect2.cpp  Rect2.h  Rect2D.cpp  Rect2D.h  Texture.cpp  Texture.h  Vector2.cpp  Vector2.h  Vector2i.cpp  Vector2i.h  Viewport.cpp  (+1 more)
(+88 files in other folders)
